1.8.4 (01.08.2017):

* Cope with Tesseract 3.0.5 writing Page 1 instead of Page 0
  Thanks to Chris Mayo for the patch. Closes merge request 14


1.8.3 (01.07.2017):

* + libimage-sane-perl frontend
  - scanimage-perl and scanadf-perl frontends
  Closes bug #219 (Rescan for devices not working properly).
* Fixed bug writing multipage hOCR files.
* Fixed bug switching between Tesseract and Cuneiform (particularly for German).


1.8.2 (01.06.2017):

* Don't ignore warnings from unpaper
* Fix OCR being ghosted when Tesseract is installed.
  Thanks to Chris Mayo for the patch. Closes merge request 13
* + support for scanimage v1.0.27


1.8.1 (27.05.2017):

* Consistently ghost OCR and unpaper tools if the appropriate executables are
  not available. Closes bug #151 (Unpaper detection is not handled correctly).
* Fixed display of tesseract error messages, broken by commit
  "Gscan2pdf::Tesseract: support output to stdout instead of temporary file"
* Make RTL test work for other versions of ImageMagick.
  Closes bug #246 (t/​357_unpaper_rtl.t test fails).
* Improve support for button-type scan options.
* + icons/gscan2pdf-papyrus.svg for use with Papyrus-like themes.
  Thanks to Chris JC Jones for donating the icon.
* + ppm & pbm extensions to open file chooser.
  Closes bug #252 (Support for pbm nd ppm bitmap formats)
* Fixed multipage scanning for Samsung CLX-4190.
* Change metadata filename codes to use strftime
* Many improvements to the display of OCR output.
  Thanks to Peter Marschall for the patches.
  Closes Debian bug #858767 (fixes & improvements to gscan2pdf)
* Update to Hungarian translation (thanks to csola)
* Update to Traditional Chinese translation (thanks to Po-Hsu Lin)
* Update to Slovak translation (thanks to Dušan Kazik)


1.8.0 (12.04.2017):

* + "Writing system" option in "Clean Up" (unpaper) dialogue, affecting
  the order in which the pages are imported when scans are split.
  Closes feature request #94